--- a/appBase-child/less/vars.less
+++ b/appBase-child/less/vars.less
@@ -29,11 +29,18 @@
 @beige    : #c7ae96;
 @heading  : #fff;
 @grey     : #ccc;
+@color-dark          : #333;
 
+
+
+@hover-links    : #fff;
 @hover-light    : #fff;
 @hover-background   : #491214;
 @hover-text     : #d0bfb0;
 @color-error    : #b51731;
 
 
-
+@scrollTrack           : #111;
+@scrollDrag           : #ccc;
+@scrollArrow           : #ccc;
+@scrollCorner           : #222;
